updaed latest tody 7 26 am

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Biowax</string>
+
+    <string name="no_network_title">No Internet Connection</string>
+    <string name="no_network_msg">Make sure you are connected to a WiFi or a mobile network and try again.</string>
+
 </resources>
